2011-01-13  vadim  <vadim@netcitadel.com>

	* NATCompiler_asa8.cpp (compile): refs #1928 "Support for
	object-group in OSrc". Implemented support for object-group
	and named objects for Osrc and ODst in ASA 8.3 NAT rules.

	* PolicyCompiler_cisco.cpp (removeRedundantAddresses): fixed #1917
	"Duplicate objects are not detected". Compiler should detect
	duplicate objects that may be created in a rule element when user
	combines Address Table object with other address or network
	objects there.

	* ASA8ObjectGroup.cpp (toString): refs #1885 Compiler uses named
	objects and objects groups to build configurations that use
	address ranges in TSrc in NAT rules. (only ASA 8.3 and later)

2011-01-12  Vadim Kurland  <vadim@netcitadel.com>

	* NATCompiler_asa8_writers.cpp (printSDNAT): refs #1907 "ASA NAT -
	fwbuilder doesn't support multiple translated sources in a single
	NAT rule". Compiler uses object-group to translate NAT rules that
	have multiple objects in Translated Source.

	* PolicyCompiler_pix_writers.cpp (_printLog): fixed #1913 "ASA/PIX
	rules with logging enabled don't have log set unless user modifies
	Firewall Settings". Added default log level setting to the
	resource xml file for platform "pix", set to "informational". ACL
	lines now get "log " keyword followed by the log level taken from
	the rule options, or if that was not configured, from the
	firewall object settings, or if that is not configured, the
	default.

2011-01-11  vadim  <vadim@netcitadel.com>

	* NATCompiler_asa8_writers.cpp (printSDNAT): refs #1908 "ASA NAT -
	cannot configure static NAT translations with (inside,outside)".
	Added NAT rule option to make source nat rules "static". The
	option is presented to the user as three radio buttons in the NAT
	rule options dialog which is only enabled when platform is "pix"
	and version >= 8.3. Policy compiler generates "twice nat" rules
	with keyword "static" in the following cases: when TSrc is