@@ -1,3 +1,10 @@
+2011-01-14  vadim  <vadim@netcitadel.com>
+
+	* libfwbuilder/src/fwbuilder/InetAddrMask.cpp (getOverlap): fixes
+	#1934 "libfwbuilder::getOverlap() incorrectly calculates overlap
+	between ipv4 networks". This should also fix SF bug 3156376 "Can
+	not find interface with network zone that includes address range".
+
 2011-01-13  vadim  <vadim@netcitadel.com>
 
 	* NATCompiler_asa8.cpp (compile): refs #1928 "Support for
